js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleA.0.kt
@file:JsModule("js-module-a")

external fun externalDemoFunction(): Int
